# clangAX

./: .gitignore  CMakeLists.txt  README.md  SampleCode.cax  SampleCode.txt  clangax.cpp  lexical_analyzer.cpp  lexical_report.txt
irGenerator/: ir_generator.cpp  output.ll
lexicalAnalyzer/: lexical_analyzer.cpp  symbol_table.cpp  symbol_table.h
parser/: parse_report.txt  parse_tree.txt  parser.cpp
symbolTable/: symbol_table.cpp  symbol_table.csv  symbol_table_report.txt
tokenizer/: mainToken.cpp  tokenizer.cpp  tokenizer.hpp
